--- a/app/src/main/res/layout/activity_calculo_peso_ideal.xml
+++ b/app/src/main/res/layout/activity_calculo_peso_ideal.xml
@@ -19,5 +19,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"/>
+    <Button
+        android:id="@+id/voltar_bt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Voltar"/>
 
 </LinearLayout>
