--- a/app/src/main/res/layout/activity_calculo_peso_ideal.xml
+++ b/app/src/main/res/layout/activity_calculo_peso_ideal.xml
@@ -13,12 +13,14 @@
         android:id="@+id/peso_ideal_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:textAlignment="center"/>
     <TextView
         android:id="@+id/diferenca_peso_ideal_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:textAlignment="center"/>
     <Button
         android:id="@+id/voltar_bt"
         android:layout_width="wrap_content"
