--- a/app/src/main/res/layout/activity_gasto_calorico_diario.xml
+++ b/app/src/main/res/layout/activity_gasto_calorico_diario.xml
@@ -13,7 +13,8 @@
         android:id="@+id/gasto_calorico_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:textAlignment="center"/>
     <Button
         android:id="@+id/calcular_peso_ideal_bt"
         android:layout_width="wrap_content"
