--- a/app/src/main/res/layout/activity_resumo_da_saude.xml
+++ b/app/src/main/res/layout/activity_resumo_da_saude.xml
@@ -38,6 +38,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"/>
+    <TextView
+        android:id="@+id/frequancia_cardiaca_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"/>
+    <TextView
+        android:id="@+id/zona_treino_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"/>
     <Button
         android:id="@+id/voltar_bt"
         android:layout_width="wrap_content"
